configs/learning/1-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-world
  labels:
    component: hello-world
spec:
  restartPolicy: Never
  containers:
    - name: hello-world
      image: tutum/hello-world
      resources:
        limits:
          cpu: "100m"
          memory: 128Mi
        requests:
          cpu: "50m"
          memory: 64Mi
      ports:
        - containerPort: 80
