configs/learning/17-init-containers.yaml
apiVersion: v1
kind: Pod
metadata:
  name: init-container-pod
  labels:
    app: myapp
spec:
  volumes:
    - name: shared-data
      emptyDir: {}
  restartPolicy: Never
  containers:
    - name: myapp-container
      image: busybox
      command: ['sh', '-c', 'echo The app is running! && sleep 3600']
