configs/learning/2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  labels:
    component: hello-world
spec:
  replicas: 2
  selector:
    matchLabels:
      component: hello-world
  template:
    metadata:
      labels:
        component: hello-world
    spec:
      containers:
        - name: hello-world
          image: tutum/hello-world
          resources:
            limits:
              cpu: "100m"
              memory: 128Mi
            requests:
              cpu: "50m"
              memory: 64Mi
          ports:
              - containerPort: 80
