configs/learning/6-volumes.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-world-volumes
  labels:
    component: hello-world-volumes
spec:
  restartPolicy: Always
  containers:
    - name: hello-world-volumes
      image: tutum/hello-world
      resources:
        limits:
          cpu: "100m"
          memory: 128Mi
        requests:
          cpu: "50m"
          memory: 64Mi
      ports:
        - containerPort: 80
      volumeMounts:
          - mountPath: /data/
            name: persistent-volume
  volumes:
      - name: persistent-volume
        persistentVolumeClaim:
          claimName: hello-world-data
