configs/learning/7-secrets.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-world-secrets
  labels:
    component: hello-world-secrets
spec:
  restartPolicy: Never
  containers:
    - name: hello-world-secrets
      image: tutum/hello-world
      volumeMounts:
        - name: hello-volume
          mountPath: "/data/"
      resources:
        limits:
          cpu: "100m"
          memory: 128Mi
        requests:
          cpu: "50m"
          memory: 64Mi
      ports:
        - containerPort: 80
  volumes:
    - name: hello-volume
      secret:
        secretName: hello-secret
        items:
          - key: topsecret
            path: top.secret
