configs/learning/4-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  ports:
    -  name: http
       port: 80
       protocol: TCP
       targetPort: 80
  selector:
    component: hello-world
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-nodeport
spec:
  ports:
    -  name: http
       port: 80
       nodePort: 30080
       protocol: TCP
       targetPort: 80
  selector:
    component: hello-world
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-lb
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    component: hello-world
  type: LoadBalancer
