configs/learning/8-healthchecks.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-world-health
  labels:
    component: hello-world-health
spec:
  restartPolicy: Never
  containers:
    - name: hello-world-health
      image: tutum/hello-world
      resources:
        limits:
          cpu: "100m"
          memory: 128Mi
        requests:
          cpu: "50m"
          memory: 64Mi
      ports:
        - containerPort: 80
      livenessProbe:
        httpGet:
          path: /
          port: 80
        initialDelaySeconds: 10
        periodSeconds: 15
      readinessProbe:
        httpGet:
          path: /
          port: 8000
        initialDelaySeconds: 5
        periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-health
spec:
  ports:
    -  name: http
       port: 80
       protocol: TCP
       targetPort: 80
  selector:
    component: hello-world-health
  type: ClusterIP
